...
      />
      <Tabs.Screen
        name="inventory"
        options={{
          title: 'Inventory',
          tabBarLabel: 'Inventory',
          tabBarAccessibilityLabel: 'Inventory Tab',
          tabBarIcon: ({ color }) => <Icon name="inventory" color={color} size={24} />,
        }}
      />
      <Tabs.Screen
        name="log"
        options={{
...
      />
      <Tabs.Screen
        name="wishlist"
        options={{
          title: 'Wishlist',
          tabBarLabel: 'Wishlist',
          tabBarAccessibilityLabel: 'Wishlist Tab',
          tabBarIcon: ({ color }) => <Icon name="wishlist" color={color} size={24} />,
        }}
      />
      <Tabs.Screen
        name="empties"
        options={{
...
